# dbmeta

./: .env.example  AGENTS.md  Cargo.toml  README.md  TESTING.md  docker-compose.yml
.github/workflows/: ci.yml
src/db/: error.rs  mod.rs  store.rs  util.rs
src/db/mysql/: mod.rs  sync.rs
src/db/postgres/: mod.rs  sync.rs  system.rs
src/tests/: mod.rs  utils.rs
tests/fixtures/: README.md  mysql_routines.sql  mysql_schema.sql  postgres_schema.sql
