[package]
name = "mblist"
version = "0.1.0"
edition = "2021"

[dependencies]
# tokio + rustls
sqlx = { version = "0.7", features = [ "runtime-tokio", "runtime-tokio-native-tls","mysql","postgres"] }
tokio = { version = "1.20.0", features = ["rt", "macros"]}
url = "2"
regex = "1.10.4"
version-compare = "0.2.0"
lazy_static = "1.5"
phf = { version = "0.12.1",features = ["macros"]}
dotenvy="0.15"
async-trait = "0.1.68"